@@ -1,4 +1,4 @@
-/* $OpenBSD: authfile.c,v 1.90 2011/05/13 00:05:36 djm Exp $ */
+/* $OpenBSD: authfile.c,v 1.91 2011/05/23 07:24:57 djm Exp $ */
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
  * Copyright (c) 1995 Tatu Ylonen <ylo@cs.hut.fi>, Espoo, Finland
@@ -774,8 +774,11 @@ key_try_load_public(Key *k, const char *filename, char **commentp)
 				;
 			if (*cp) {
 				if (key_read(k, &cp) == 1) {
-					if (commentp)
-						*commentp=xstrdup(filename);
+					cp[strcspn(cp, "\r\n")] = '\0';
+					if (commentp) {
+						*commentp = xstrdup(*cp ?
+						    cp : filename);
+					}
 					fclose(f);
 					return 1;
 				}
